--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@octokit/auth-app": "^4.0.10",
+    "@octokit/core": "^4.2.1",
     "dotenv": "^16.0.3",
     "octokit": "^2.0.14"
   }
